# halmstad_ws

./: .gitignore  AGENTS.md  CURRENT_STATE.md  README.md  RUNNING_SIM.md  THESIS_NOTATION_STYLE.md  TODO.txt  VISUAL_FOLLOW_PLAN.md  WILLIAM_UPDATED_MERGE_NOTES.md  requirements.txt  run.sh  run_1to1_follow.sh  run_1to1_yolo.sh  run_capture_dataset.sh  run_follow_control.sh  run_follow_debug.sh  run_follow_preflight.sh  run_follow_with_bag.sh  run_follow_yaw_debug.py  run_gazebo_sim.sh  run_localization.sh  run_nav2.sh  run_nav2_rviz.sh  run_pose_source_debug.py  run_record_experiment.sh  run_rqt_image_view.sh  run_rqt_perspective.sh  run_sim_orchard.sh  run_slam.sh  run_spawn_uav.sh  run_spawn_uavs.sh  run_tmux_1to1.sh  run_yolo.sh  stop.sh  stop_tmux_1to1.sh  to-dos.txt
William/: BLOCK2_WORKFLOW_AND_INTEGRATION.md  CHANGE_PROTOCOL.md  COLCON_IGNORE  Markdown_For_Thesis.md  claude_opus_v1_fix_handoff.md  version1_handoff_for_copilot.md  visual_follow_pipeline_bytetrack_sensors.md
descriptions/: FOLLOW_UAV_MATH.md  FOLLOW_UAV_ODOM_MATH.md
docs/: codex_dataset_capture_orbit_autolabel_UPDATED.md  kill_script.md  practical_requirements_todo_uav.md  stage2_modes_runbook.md  stage3_checklist.md  ultralytics_tracking_proxy_implementation_guide.md
gpu-lab/: environment.yml
maps/: Untitled.xcf  baylands.yaml  baylands_art_1.pgm  (+68 more)
src/semantic_segmentation_node/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/semantic_segmentation_node/config/: ontology.yaml
src/semantic_segmentation_node/semantic_segmentation_node/: segmentation_node.py
(+328 files in other folders)
