<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_segmentation_node</name>
  <version>0.0.1</version>
  <description>ROS2 node for semantic segmentation inference</description>
  <maintainer email="pedro.gonzalez@eia.edu.co">Pedro Gonzalez</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
